--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,10 @@
 {
   "presets": [
+    "react",
     [
       "env",
       {"targets": { "browsers": ["last 2 versions"] } }
     ]
-  ]
+  ],
+  "plugins": ["transform-class-properties"]
 }
