--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,16 @@
 {
   "presets": [
-    "react",
     [
-      "env",
-      {"targets": { "browsers": ["last 2 versions"] } }
-    ]
+      "@babel/env",
+      {
+        "targets": {
+          "browsers": "last 2 Chrome versions"
+        }
+      }
+    ],
+    "@babel/react"
   ],
-  "plugins": ["transform-class-properties"]
+  "plugins": [
+    "@babel/proposal-class-properties"
+  ]
 }
