--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
     "prop-types": "^15.6.2",
     "quagga": "^0.12.1",
     "react": "^16.5.2",
